--- a/amina-saif/src/index.css
+++ b/amina-saif/src/index.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   font-family: 300 11px/1.4 'Helvetica Neue','sans-serif';
   color: 444;
-  background: #022c43;
+  background: #dddb4c;
   display: block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
