--- a/amina-saif/src/components/Sidebar/index.scss
+++ b/amina-saif/src/components/Sidebar/index.scss
@@ -79,5 +79,31 @@
             content: 'CONTACT';
         }
     }
+
+    a.active{
+        svg{
+            color:#ffd700;
+        }
+    }
+  }
+
+  ul{
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    display: block;
+    padding: 0;
+    list-style: none;
+    text-align: center;
+    margin: 0;
+
+    li{
+        a{
+            padding: 7px 0;
+            display: block;
+            font-size: 15px;
+            line-height: 16px;
+        }
+    }
   }
 }
